--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1103,8 +1103,9 @@ DashboardScreen As screen:
                         =//for new form
                         Set(VarFormMode,Defaults(LeadInformations));
                         
-                        //VArindicator is indcates first step in progress bar
+                        //Varindicator is indcates first step in progress bar
                         Set(VarIndicator,false);
+                        //for new form reset all forms and set  all varibale as blank.
                         NewForm(BuildingInfoForm);ResetForm(BuildingInfoForm);
                         NewForm(EstimateForm);ResetForm(EstimateForm);
                         NewForm(ScopeInfoForm);ResetForm(ScopeInfoForm);
